--- a/src/data/levels/✨_Let's play/01_Non-platform games/chat/es.yml
+++ b/src/data/levels/✨_Let's play/01_Non-platform games/chat/es.yml
@@ -59,7 +59,7 @@ finish:
     filesystem.mkdirp(directory);
 
     ["Bobl.neees", "Spacegulls.neees", "Wolfling.neees"].forEach((file) => {
-      filesystem.write(`${directory}/${file}`, level.bin[file], { binary: true });
+      filesystem.cp(`${Drive.ALLROMS_DIR}/${file}`, `${directory}/${file}`);
     });
   messages:
   - ¡IMPRESIONANTE!
