--- a/src/data/levels/✨_Let's play/02_Platform games/chat/es.yml
+++ b/src/data/levels/✨_Let's play/02_Platform games/chat/es.yml
@@ -37,7 +37,7 @@ finish:
     filesystem.mkdirp(directory);
 
     ["FilthyKitchen.neees", "Isostasy.neees", "Nalleland.neees", "WolfSpirit.neees"].forEach((file) => {
-      filesystem.write(`${directory}/${file}`, level.bin[file], { binary: true });
+      filesystem.cp(`${Drive.ALLROMS_DIR}/${file}`, `${directory}/${file}`);
     });
   messages:
   - ¡guau!
