--- a/src/data/levels/✨_Let's play/04_Adventure games/chat/es.yml
+++ b/src/data/levels/✨_Let's play/04_Adventure games/chat/es.yml
@@ -30,7 +30,7 @@ finish:
     filesystem.mkdirp(directory);
 
     ["Crowborg.neees", "MissingLands.neees", "RavensGate.neees"].forEach((file) => {
-      filesystem.write(`${directory}/${file}`, level.bin[file], { binary: true });
+      filesystem.cp(`${Drive.ALLROMS_DIR}/${file}`, `${directory}/${file}`);
     });
   messages:
   - ERES ~GENIAL~.
