--- a/src/data/levels/✨_Let's play/05_Battle games/chat/es.yml
+++ b/src/data/levels/✨_Let's play/05_Battle games/chat/es.yml
@@ -38,7 +38,7 @@ finish:
     filesystem.mkdirp(directory);
 
     ["SuperTiltBro.neees", "TestlaVsEdison.neees"].forEach((file) => {
-      filesystem.write(`${directory}/${file}`, level.bin[file], { binary: true });
+      filesystem.cp(`${Drive.ALLROMS_DIR}/${file}`, `${directory}/${file}`);
     });
   messages:
   - TÚ
