--- a/src/data/levels/05b_PPU/14_Sprites 2-6 - Evaluation/chat/es.yml
+++ b/src/data/levels/05b_PPU/14_Sprites 2-6 - Evaluation/chat/es.yml
@@ -24,7 +24,7 @@ ok:
         *_-_*->** crea un sprite usando ~this._createSprite(...)~_--_
         *_-_*->** si el sprite debe renderizarse en la scanline actual, y ~sprites~ tiene menos de 9 elementos:_--_
           *_-_*->** si ~sprites~ tiene menos de 8 elementos:_--_
-            *_-_*->** añade al arreglo ~sprites~_--_
+            *_-_*->** agrega al array ~sprites~_--_
           *_-_*->** de lo contrario:_--_
             *_-_*->** asigna ~this.ppu.registers.ppuStatus.spriteOverflow = 1~_--_
             *_-_*->** detiene el bucle_--_
