--- a/src/data/levels/05b_PPU/15_Sprites 3-6 - Drawing/chat/en.yml
+++ b/src/data/levels/05b_PPU/15_Sprites 3-6 - Drawing/chat/en.yml
@@ -26,9 +26,12 @@ easy:
       *_-_*renderScanline()**:_--_
         *_-_*->** use the code from my previous message!_--_
       *_-_*_render(sprites)**:_--_
+        *_-_*->** determine the y coordinate:_--_
+          _-_```javascript this.ppu.scanline;```_--_
+          _-_(let's call this ~y~)_--_
         *_-_*->** for each sprite in ~sprites~:_--_
           *_-_*->** calculates the "inside" Y coordinate:_--_
-            _-_```javascript sprite.diffY(this.ppu.scanline)```_--_
+            _-_```javascript sprite.diffY(y)```_--_
             _-_(let's call this ~insideY~)_--_
           *_-_*->** instantiates a ~Tile~ passing the ppu, the pattern table id, the tile id, and the ~insideY~_--_
             _-_(let's call this ~tile~)_--_
