Updating checkmark emoji to the button version which is more universally green

--- a/src/data/levels/02_Assembly/04_Flags/chat/en.yml
+++ b/src/data/levels/02_Assembly/04_Flags/chat/en.yml
@@ -63,7 +63,7 @@ explodes:
 
 a4:
   messages:
-  - correct! ✔️
+  - correct! ✅
   - but the processor isn't actually dumb
   - it notifies the program that the value didn't fit
   - by setting the <Carry Flag> to 1
