--- a/src/data/levels/03_Cartridge/07_Integrating our work/chat/es.yml
+++ b/src/data/levels/03_Cartridge/07_Integrating our work/chat/es.yml
@@ -30,7 +30,7 @@ done:
     level.stopEffect();
     book.unlock("useCartridge");
   messages:
-  - ✔️  ¡hecho!
+  - ✅  ¡hecho!
   - ahora, el ícono 💾  en el emulador brillará ✨
   - puedes alternar entre tu implementación y la rota haciendo clic en él
   - intenta abrir algunos juegos, se verán mucho mejor 😉
