--- a/src/data/levels/05a_CPU/14_Operations/chat/en.yml
+++ b/src/data/levels/05a_CPU/14_Operations/chat/en.yml
@@ -19,7 +19,7 @@ main:
 
 multiple:
   messages:
-  - exactly that ✔️
+  - exactly that ✅
   - "here's a function that defines all the opcodes for you:"
   - 📄  ~/lib/cpu/defineOperations.js~
   - you only need to call it, passing the `instructions` and the `addressingModes` objects
