--- a/src/data/levels/05a_CPU/15_Execute/chat/en.yml
+++ b/src/data/levels/05a_CPU/15_Execute/chat/en.yml
@@ -18,7 +18,7 @@ cycles:
   - so every opcode knows how many cycles it should take
   responses:
   - (*) why don't we want to build a "cycle-accurate" emulator? [accuracy]
-  - ✔️  alright, how should we proceed? [rightway]
+  - ✅  alright, how should we proceed? [rightway]
 
 accuracy:
   messages:
