--- a/src/data/levels/05a_CPU/16_The golden log/chat/en.yml
+++ b/src/data/levels/05a_CPU/16_The golden log/chat/en.yml
@@ -18,7 +18,7 @@ main:
 
 golden:
   messages:
-  - a log file that documents the result of running that test ROM, but created by an emulator that was proven to work correctly ✔️
+  - a log file that documents the result of running that test ROM, but created by an emulator that was proven to work correctly ✅
   - "it has -in order-: the [PC], the bytecode, the decompiled assembly, the state of all registers, and the cycle counter"
   - so far, I only ran basic tests to your code
   - this will go through all type of corner cases, verifying that your CPU is solid
