--- a/src/data/levels/05a_CPU/17_Integrating the CPU/chat/en.yml
+++ b/src/data/levels/05a_CPU/17_Integrating the CPU/chat/en.yml
@@ -36,7 +36,7 @@ done:
     level.stopEffect();
     book.unlock("useCPU");
   messages:
-  - ✔️  done!
+  - ✅  done!
   - now, the 🧠  icon in the emulator will glow ✨
   - try running some games! you'll notice a big improvement
   - the timing should be more consistent, and you won't face any bugs that affect game logic
