--- a/src/data/levels/05a_CPU/17_Integrating the CPU/chat/es.yml
+++ b/src/data/levels/05a_CPU/17_Integrating the CPU/chat/es.yml
@@ -36,7 +36,7 @@ done:
     level.stopEffect();
     book.unlock("useCPU");
   messages:
-  - ✔️  ¡listo!
+  - ✅  ¡listo!
   - ahora, el ícono 🧠  en el emulador brillará ✨
   - ¡prueba a ejecutar algunos juegos! notarás una gran mejora
   - el tiempo debería ser más consistente y no enfrentarás ningún error que afecte la lógica del juego
