--- a/src/data/levels/05b_PPU/19_Mirroring 1-2 - Palette RAM/chat/es.yml
+++ b/src/data/levels/05b_PPU/19_Mirroring 1-2 - Palette RAM/chat/es.yml
@@ -1,4 +1,29 @@
 main:
   messages:
-  - coming soon!
+  - acceder a la Palette RAM es un poco raro en la NEEES
+  - algunas direcciones son espejos de otras direcciones
+  - arreglémoslo rápidamente
+  - |-
+    📚  _-_en `PPUMemory`, busca la sección _--_🎨 _-_  ~Palette RAM~ en `read(...)` y reemplázala con este código:
+    ```javascript
+    if (address >= 0x3f00 && address <= 0x3f1f) {
+      if (address === 0x3f10) return this.read(0x3f00);
+      if (address === 0x3f14) return this.read(0x3f04);
+      if (address === 0x3f18) return this.read(0x3f08);
+      if (address === 0x3f1c) return this.read(0x3f0c);
+      return this.paletteRam[address - 0x3f00];
+    }
+    ```_--_
+  - |-
+    📚  _-_haz lo mismo con `write(...)`, pero usa esto en su lugar:
+    ```javascript
+    if (address >= 0x3f00 && address <= 0x3f1f) {
+      if (address === 0x3f10) return this.write(0x3f00, value);
+      if (address === 0x3f14) return this.write(0x3f04, value);
+      if (address === 0x3f18) return this.write(0x3f08, value);
+      if (address === 0x3f1c) return this.write(0x3f0c, value);
+      this.paletteRam[address - 0x3f00] = value;
+      return;
+    }
+    ```_--_
   responses: []
